# tournamental

./: .env.example  .gitignore  .gitleaks.toml  AGENT-PROMPTS.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.json  GO-LIVE.md  IDEAS.md  LAUNCH-PLAYBOOK.md  LICENSE  MORNING_REPORT.md  README.md  REVIEW.md  SECURITY.md  STARTER-PROMPT.md  TRADEMARK.md  Tournamental Pitch.md  VTorn Pitch.md  VTourn Pitch.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labels.yml  pull_request_template.md
.playwright-mcp/: page-2026-05-11T02-53-24-791Z.yml  page-2026-05-11T02-53-33-902Z.yml  page-2026-05-11T02-54-49-905Z.yml  (+7 more)
apps/statsbomb-replay/: README.md  pyproject.toml
apps/statsbomb-replay/data/: historical-meetings.json  wc2022-final-players.csv
apps/statsbomb-replay/src/statsbomb_replay/: __init__.py  coords.py  emitter.py  loader.py  mapping.py  photos.py  replay.py  state_synth.py
apps/statsbomb-replay/tests/: test_emitter_integration.py  test_mapping.py
apps/statsbomb-replay/tests/fixtures/: sample_pass.json  sample_penalty_attempt.json  sample_shot_goal.json
apps/wc2026-data/: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
apps/wc2026-data/scripts/: dump-openapi.run.ts  fetch-fixtures.test.ts  fetch-fixtures.ts  regenerate_real_draw.py  scrape-players.test.ts  scrape-players.ts  scrape-stats.test.ts  scrape-stats.ts
apps/wc2026-data/src/: server.ts  settlement-bridge.ts  swagger.ts
apps/wc2026-data/src/live/: apifootball-provider.ts  mock-provider.ts  provider.ts  sportradar-provider.ts  types.ts
apps/wc2026-data/src/players/: types.ts  wikidata-scraper.ts
apps/wc2026-data/src/stats/: aggregator.ts  cache.ts  index.ts  types.ts
apps/wc2026-data/src/stats/sources/: apifootball-stats.ts  fbref-team-form.ts  statsbomb-h2h-types.ts  statsbomb-h2h.ts  wikidata-h2h.ts
apps/wc2026-data/src/wc2026_data/: __init__.py  canonical_fixtures.py  players_seed.py  scrape.py  sources.py  sources_real.py
apps/wc2026-data/tests/: conftest.py  stats-scraper.test.ts  test_canonical_fixtures.py  test_data_consistency.py  test_real_draw.py  test_schema_validation.py  test_scrape.py  wikidata-scraper.test.ts
apps/wc2026-data/tests/live/: mock-provider.test.ts  real-providers.test.ts  server.test.ts  settlement-bridge.test.ts
config/: clip-captions.json
(+2269 files in other folders)
