[project]
name = "statsbomb-replay"
version = "0.1.0"
description = "VTorn StatsBomb-replay producer (AR-FR 2022 World Cup Final)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "VTorn contributors" }]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.11",
    "websockets>=13.0",
    "pydantic>=2.7",
]

[project.scripts]
statsbomb-replay = "statsbomb_replay.replay:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/statsbomb_replay"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "PL", "RUF"]
ignore = [
  "PLR0911", # too many returns — clean dispatch tables triggered this
  "PLR0912", # too many branches
  "PLR0913", # too many args
  "PLR0915", # too many statements
  "PLR2004", # magic value
  "PLC0415", # local imports — used for optional websockets dep
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
